--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "expo": "~52.0.17",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.21.2",
+    "mysql2": "^3.11.5",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
@@ -28,5 +32,17 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devconstruct/App_One.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/devconstruct/App_One/issues"
+  },
+  "homepage": "https://github.com/devconstruct/App_One#readme",
+  "description": ""
 }
