--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "expo": "~52.0.17",
     "expo-status-bar": "~2.0.0",
